--- a/files/index.html
+++ b/files/index.html
@@ -1,1 +1,3 @@
  <embed src="https://zyyjjj.github.io/files/YujiaZhang_CV_07282021_GitHubPages.pdf" width="100%" height="850px"/>
+
+ <embed src="https://zyyjjj.github.io/files/Weierstrass_Translation.pdf" width="100%" height="850px"/>
